# hiasm5

./: .clangd  .cproject  .gitignore  .project  CMakeLists.txt  README.md  build_msys.sh  makefile  mingw-toolchain.cmake  run_msys.sh
FTCG/: CGTShare.pas  CGTShare.ppu  CodeGen.dprru  GCTShare.pasru  make.sh
RTCG/: IntFunc.cpp
docs/: build-unix_and_linux.md  build_windows.md  hldd-hiasm.txt
elements/: CGTShare.h
elements/FTCG/: CMakeLists.txt  CodeGen.dpr  MD5.pas  direct.inc  make.sh  make_msys.sh  make_unix.sh
elements/RTCG/: CMakeLists.txt  Makefile
elements/_base/: elements.db  sql.sh
elements/web/: CMakeLists.txt  CodeGen.dpr  direct.inc  elements.db  elements.sql  make.bat  makefile  task.txt  web.sha
elements/web/Example/JavaScript/: DOM.html  DOM.sha  DynImg.html  DynImg.sha  Text.html  Text.sha
elements/web/Example/PHP/: cURL_demo.sha
elements/web/Example/tutorial/Step1/: Chapter_1.sha  Chapter_2.sha  Chapter_3.html  Chapter_3.sha  Chapter_4.sha  Chapter_5.sha  Chapter_6.sha  Chapter_7.sha  Chapter_8.sha
elements/web/Example/tutorial/Step2/: Chapter_1.sha  Chapter_2.sha  Chapter_3.sha  Chapter_4.html  Chapter_4.sha
elements/web/code/: chmod_to_str.php  dm_head.hws  dm_tail.hws  dmtag_html.hws  func_head.hws  func_tail.hws  hiASort.hws  hiAccessManager.hws  hiAddSlashes.hws  hiArrayEnum.hws  hiArrayItem.hws  hiArrayRead.hws  hiArraySize.hws  hiArraySplit.hws  hiArrayWrite.hws  hiBbCode.hws  hiCG_BlockDecLevel.hws  hiCG_BlockDelete.hws  hiCG_BlockIncLevel.hws  hiCG_BlockReg.hws  hiCG_BuildTime.hws  hiCG_HiAsmVersion.hws  hiCG_IDController.hws  hiCG_LevelControl.hws  hiCG_Trace.hws  hiCSS.hws  hiCSSEntryPoint.hws  hiCallFunc.hws  hiCase.hws  hiChanelToIndex.hws  hiChangeMon.hws  hiCharAt.hws  hiChop.hws  hiChunkSplit.hws  hiCloneNode.hws  hiConfirm.hws  hiConvertCyrString.hws  hiCookie.hws  hiCopy.hws  hiCreateElement.hws  (+189 more)
elements/web/conf/: ASort.ini  AccessManager.ini  AddSlashes.ini  ArrayEnum.ini  ArrayItem.ini  ArrayRead.ini  ArraySize.ini  ArraySplit.ini  ArrayWrite.ini  BbCode.ini  CG_BlockDecLevel.ini  CG_BlockDelete.ini  CG_BlockIncLevel.ini  CG_BlockPrint.ini  CG_BlockReg.ini  CG_BlockSelect.ini  CG_BuildTime.ini  CG_HiAsmVersion.ini  CG_IDController.ini  CG_LevelControl.ini  CG_Trace.ini  CSS.ini  CSSEntryPoint.ini  CallFunc.ini  Case.ini  ChanelToIndex.ini  ChangeMon.ini  CharAt.ini  Chop.ini  ChunkSplit.ini  CloneNode.ini  Confirm.ini  ConvertCyrString.ini  Cookie.ini  Copy.ini  CreateElement.ini  CreateFunction.ini  CustomCode.ini  DM_Anchor.ini  DM_Button.ini  (+199 more)
elements/web/make/: CMakeLists.txt  main.c  make_html.sha
elements/web/new/: CSSEntryPoint.sha  EntryPoint.sha  HtmlEntryPoint.sha  JavaEntryPoint.sha
elements/web/prof/: FormatTime_date_time.prf  HTM_Form_file_upload.prf  InfoTip_info.prf  InfoTip_title.prf
runnersrc/: Compiler.cpp  Compiler.h  Data.cpp  Element.cpp  Element.h  ElementConfig.cpp  ElementConfig.h  ElementGrips.cpp  ElementGrips.h  ElementPoint.cpp  ElementPoint.h  ElementProperty.cpp  ElementProperty.h  MainDataBase.cpp  MainDataBase.h  Makefile  Pack.cpp  Pack.h  SDK.cpp  SDK.h  SelectManager.cpp  SelectManager.h  StringList.cpp  StringList.h  create-links.sh  runner.cpp  settings.h  share.cpp  share.h
scripts/: build_msys.sh  readme.txt  run_msys.sh
src/: ElementProperty.cpp  Elements.cpp  MainDataBase.cpp  Makefile  Pack.cpp  ProjectBuilder.cpp  SDK.cpp  SDK_Editor.h  hico.cpp  share.cpp  share.h
src/test/: glitz.cpp  glitz.h
